--- a/templates/main_layout.html
+++ b/templates/main_layout.html
@@ -14,7 +14,7 @@
     <body>
         {% include "navbar.html" %}
 
-        <div id="device_corrector" class="row row-cols-1 row-cols-md-2">
+        <div id="device_corrector" class="row row-cols-1 row-cols-md-2 row-cols-lg-3">
             {% block content %}{% endblock %}
         </div>
 
