--- a/templates/main_layout.html
+++ b/templates/main_layout.html
@@ -4,6 +4,20 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+        <link rel="manifest" href={{ url_for("static", filename="manifest.js") }}>
+        <script>
+            // const url = {{ url_for("static", filename="service-worker.js") }}
+            if ('serviceWorker' in navigator) {
+                navigator.serviceWorker.register('./service-worker.js').then(function() { console.log('Service Worker Registered'); });
+            }
+        </script>
+
+        <meta name="apple-mobile-web-app-capable" content="yes"><!-- SafariのURLバーを消す -->
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"><!-- IOSステータスバーの表示形式の指定 -->
+        <meta name="apple-mobile-web-app-title" content="HaLaKe"><!-- タイトル -->
+        <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+        <link rel="apple-touch-icon" href="../imgs/logo120.png" sizes="120x120"><!-- IOSのアイコン指定、複数指定で -->
+        <link rel="apple-touch-icon" href="../imgs/logo.png" sizes="192x192"
 
         <title>{{ title }}</title>
         <script src={{ url_for("static", filename="script.js") }}></script>
