--- a/templates/main_layout.html
+++ b/templates/main_layout.html
@@ -4,11 +4,11 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-        <link rel="manifest" href="../pwa/manifest.json">
+        <link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}">
         <script>
-            // const url = {{ url_for("static", filename="service-worker.js") }}
+            const url = '{{ url_for("static", filename="service-worker.js") }}'
             if ('serviceWorker' in navigator) {
-                navigator.serviceWorker.register('../pwa/service-worker.js').then(function() { console.log('Service Worker Registered'); });
+                navigator.serviceWorker.register(url).then(function() { console.log('Service Worker Registered'); });
             }
         </script>
 
