--- a/templates/main_layout.html
+++ b/templates/main_layout.html
@@ -16,8 +16,8 @@
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"><!-- IOSステータスバーの表示形式の指定 -->
         <meta name="apple-mobile-web-app-title" content="HaLaKe"><!-- タイトル -->
         <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-        <link rel="apple-touch-icon" href='{{ url_for("static", filename="imges/logo120") }}'><!-- IOSのアイコン指定、複数指定で -->
-        <link rel="apple-touch-icon" href='{{ url_for("static", filename="imges/logo") }}' sizes="192x192"
+        <link rel="apple-touch-icon" href='{{ url_for("static", filename="/images/logo120") }}'><!-- IOSのアイコン指定、複数指定で -->
+        <link rel="apple-touch-icon" href='{{ url_for("static", filename="/images/logo") }}' sizes="192x192"
 
         <title>{{ title }}</title>
         <script src='{{ url_for("static", filename="script.js") }}'></script>
